crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__peg_snapshots@comment_eof.jsonnet.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
assertion_line: 1184
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/comment_eof.jsonnet
---
Obj(
    MemberList(
        ObjMembers {
            locals: [],
            asserts: [],
            fields: [
                FieldMember {
                    name: Fixed(
                        "a",
                    ) from virtual:<test>:1-2,
                    plus: false,
                    params: None,
                    visibility: Normal,
                    value: Trivial(
                        Num(
                            1.0,
                        ),
                    ),
                },
            ],
        },
    ),
)
