crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__peg_snapshots@default_nondefault.jsonnet.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/default_nondefault.jsonnet
---
LocalExpr(
    [
        Function {
            name: "x",
            params: ExprParams {
                exprs: [
                    ExprParam {
                        destruct: Full(
                            "foo" from virtual:<test>:8-11,
                        ),
                        default: Some(
                            Str(
                                "foo",
                            ),
                        ),
                    },
                    ExprParam {
                        destruct: Full(
                            "bar" from virtual:<test>:21-24,
                        ),
                        default: None,
                    },
                ],
                signature: FunctionSignature(
                    [
                        ParamParse {
                            name: Named(
                                "foo",
                            ),
                            default: Exists,
                        },
                        ParamParse {
                            name: Named(
                                "bar",
                            ),
                            default: None,
                        },
                    ],
                ),
                binds_len: 2,
            },
            value: Literal(
                Null,
            ),
        },
    ],
    Literal(
        Null,
    ),
)
