crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__peg_snapshots@imports.jsonnet.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
assertion_line: 1184
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/imports.jsonnet
---
Arr(
    [
        Import(
            Normal from virtual:<test>:2-8,
            Trivial(
                Str(
                    "hello",
                ),
            ),
        ),
        Import(
            Str from virtual:<test>:18-27,
            Trivial(
                Str(
                    "garnish.txt",
                ),
            ),
        ),
        Import(
            Bin from virtual:<test>:43-52,
            Trivial(
                Str(
                    "garnish.bin",
                ),
            ),
        ),
    ],
)
