crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__peg_snapshots@string_escaping.jsonnet.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
assertion_line: 1184
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/string_escaping.jsonnet
---
Arr(
    [
        Trivial(
            Str(
                "Hello, \"world\"!",
            ),
        ),
        Trivial(
            Str(
                "Hello 'world'!",
            ),
        ),
        Trivial(
            Str(
                "\\\\",
            ),
        ),
        Trivial(
            Str(
                "Hello\nWorld",
            ),
        ),
        Trivial(
            Str(
                "Hello\\n\"World\"",
            ),
        ),
    ],
)
