crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__strings.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
assertion_line: 1106
expression: "format!(\"{v:#?}\")"
---
Arr(
    [
        Trivial(
            Str(
                "hello",
            ),
        ),
        Trivial(
            Str(
                "world",
            ),
        ),
        Trivial(
            Str(
                "raw\"str",
            ),
        ),
        Trivial(
            Str(
                "raw'str",
            ),
        ),
    ],
)
